js/src/tests/test262/built-ins/Error/prototype/S15.11.4_A1.js
if
(
!
Object
.
prototype
.
isPrototypeOf
(
Error
.
prototype
)
)
{
throw
new
Test262Error
(
'
#
1
:
Object
.
prototype
.
isPrototypeOf
(
Error
.
prototype
)
return
true
.
Actual
:
'
+
Object
.
prototype
.
isPrototypeOf
(
Error
.
prototype
)
)
;
}
reportCompare
(
0
0
)
;
